--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,28 +41,21 @@
             Home
           </a>
 
-          <a class="navbar-item">
-            Menu 1
+          <a class="navbar-item" href="[[=URL('sessions')]]">
+            Sessions
           </a>
 
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
-              More
+              Setup
             </a>
 
             <div class="navbar-dropdown">
-              <a class="navbar-item">
-                Submenu 1
+              <a class="navbar-item" href="[[=URL('speakers')]]">
+                Speakers
               </a>
-              <a class="navbar-item">
-                Submenu 2
-              </a>
-              <a class="navbar-item">
-                Submenu 3
-              </a>
-              <hr class="navbar-divider">
-              <a class="navbar-item">
-                Sample Menu Item
+              <a class="navbar-item" href="[[=URL('rooms')]]">
+                Rooms
               </a>
             </div>
           </div>
